# python_assignments

./: pyproject.toml
src/python_assignments/: .env  BMI_Calculator.py  Hangman.py  Password_generator.py  PyWhatKit_DB.txt  QR_code.py  QR_reader_image.py  QR_reader_webcam.py  __init__.py  calculator.py  ceasar_cipher.py  countdown_timer.py  fifteen_min_streamlit_app.py  grading_system.py  guess_the_number_comp.py  guess_the_number_user.py  images.py  madlibs.py  nutritionist.py  rock_paper_scissor.py  scraper.py  silent_auction.py  wattsapp.py  weather_info.py
src/python_assignments/Basics/: double_it.py  guess_the_number.py  joke_bot.py  lift_off.py  random_10_number.py
src/python_assignments/Functions/: average.py  chaotic_counting.py  count_even.py  double.py  get_name.py  is_odd.py  print_divisor.py  print_multiple.py  print_ones_digit.py  sentence_generator.py
src/python_assignments/Turtle_Graphics/: hirst_dot.py  multiple_shapes.py  random_blocks.py  spiral.py  star.py  turtle_race.py
src/python_assignments/dictionaries/: count_num.py  phonebook.py  pop_up.py  power_password.py
src/python_assignments/expressions/: dicesimulator.py  emc2.py  feet_to_inches.py  madlib.py  pythagorean_theorem.py  remainder_division.py  roll_dice.py  second_year.py
src/python_assignments/if_statement/: international_voting.py  leap_year.py  print_event.py  random_number.py  tall_enough.py
src/python_assignments/information_flow/: choosing_returns.py  greetings.py  multiple_return.py  range.py  stock.py  subtract_7.py
src/python_assignments/intro_python/: add_two_num.py  (+5 more)
(+11 files in other folders)
