[project]
name = "python-assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ALI-web242", email = "alinaqi1351@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "canvas>=0.28.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.4",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "pywhatkit>=5.4",
    "pyzbar>=0.1.9",
    "qrcode>=8.1",
    "requests>=2.32.3",
    "streamlit>=1.43.2",
]

[project.scripts]
python-assignments = "python_assignments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
